Completed delete image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
                         <a class="nav-link" href="/login">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/teaserData">Teaser</a>
+                            <a class="nav-link" href="/teaseradd">Teaser</a>
                             </li>
                        
                     </ul>
